# INTE

./: CMakeLists.txt  README.md  main.cpp
Google_tests/: CMakeLists.txt  TemperatureTest.cpp
src/: CMakeLists.txt  Temperature.cpp  Temperature.h
